--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h1>Headline</h1>
 		</header>
 			<section id="content">
-				<canvas id="BouncingBall" data-processing-sources="BallClass.pde">
+				<canvas id="Programming Fun Part 1" data-processing-sources="ProgrammingFun1.pde">
 				</canvas>
 		    </section>
 	    <footer>
