--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 	</head>
 	<body>
 		<header>
-			<h1>Headline</h1>
+			<h1>Programming is Fun Jan 9, 2022</h1>
 		</header>
 			<section id="content">
 				<canvas id="Programming Fun Part 1" data-processing-sources="ProgrammingFun1.pde">
+				<canvas id="Programming Fun Part 2" data-processing-sources="ProgrammingFun2.pde">
+				<canvas id="Programming Fun Part 3" data-processing-sources="ProgrammingFun3.pde">
 				</canvas>
 		    </section>
 	    <footer>
