--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<header>
-			<h1>Programming is Fun Jan 9, 2022</h1>
+			<h1>Santa Fe High School</h1>
+			<h2>Programming is Fun Jan 9, 2022</h2>
 		</header>
 			<section id="content">
 				<canvas id="Programming Fun Part 1" data-processing-sources="ProgrammingFun1.pde">
